# agents-md

./: .devcontainer-configurator.json  AGENTS.md  README.md  pyproject.toml
.devcontainer/: .codex-claude-devcontainer-configurator.json  Dockerfile  devcontainer.json  init-firewall.sh
src/agents_md_templates/: __init__.py  cli.py
src/agents_md_templates/templates/: AGENTS.md  AGENTS.nextjs.md  base.md  deep-learning.md  fastapi.md  jax-equinox.md  markdown-mdx.md  nextjs.md  python.md  pytorch.md  sqlalchemy-alembic.md
